refactor(backend): 重构控制器和服务层实现
- 重构CharArtController支持异步处理和SSE推送
- 优化ProgressServiceImpl实现事件驱动的进度管理
- 改进CharArtProcessor支持并行处理和颜色模式
- 增强WebpProcessorClient的错误处理和重试机制
- 统一异常处理和响应格式